Removes unused agent API and low-level model endpoints
Removes the agent API file, streamlining the application architecture.

Removes the low-level `/predict` endpoints from both model APIs.
The focus shifts to high-level `/match_predict` endpoints, improving maintainability and simplifying data interaction.

Updates the test script to reflect the removal of low-level API calls
and simplify the test scenarios.

Adds new dependencies to handle interactions and improve overall
functionality.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,12 @@ uvicorn
 torch>=2.0
 pandas
 pydantic
+requests
+httpx
+pyarrow
+langchain
+langchain_community
+langchain-openai
+langchain-core
+rapidfuzz 
+python-dotenv
